Menu: fix menu-item-has-children arrow icon alignment

--- a/style/navigation/_menus.scss
+++ b/style/navigation/_menus.scss
@@ -72,8 +72,9 @@
 			@include icon-content("\e90e");
 			@include font-size(.45);
 			position: absolute;
+			top: 50%;
+			transform: translateY(-50%);
 			right: 0;
-			vertical-align: middle;
 		}
 
 		.sub-menu {
